// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Experiment Component assumes variation will not change if already set 1`] = `
<div>
  Variation B
</div>
`;

exports[`Experiment Component renders a default variation 1`] = `
<div>
  Default
</div>
`;

exports[`Experiment Component renders a default variation by name 1`] = `
<div>
  Default
</div>
`;

exports[`Experiment Component renders a variation by name 1`] = `
<div>
  Variation B
</div>
`;

exports[`Experiment Component renders something while loading 1`] = `
<div>
  Is Loading
</div>
`;
